<resources>
    <string name="app_name">ExoApp</string>

    <string name="title_activity_principal">activity_principal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="puntaje_minimo_para_exonerar">Puntaje minimo para exonerar</string>


    <string name="sharing_text">#ExoApp</string>
    <string name="share_title">Compartir captura de pantalla</string>
    <string name="screenshot_take_failed">Error al tomar la captura de pantalla!!</string>
    <string name="wait">Espere un momento…</string>
    <string name="full_page_screenshot">Captura de pantalla completa</string>
    <string name="hidden_text">Hidden Text</string>
    <string name="custom_page_screenshot">Captura de pantalla personalizada</string>
    <string name="btnexoneraciones">EXONERACIÓN</string>
    <string name="seleccione_la_universidad">Seleccione la universidad</string>
    <string name="favoritos">Favoritos</string>
    <string name="correlatividad">Correlatividad</string>
    <string name="men_principal">Menú principal</string>
    <string name="bonificacion">Bonificacion</string>
    <string name="btnBonificacion">¿Cuanto debo hacer en la final?</string>
    <string name="ivcompartir">ivCompartir</string>
    <string name="tv_feli">NO EXONERASTE</string>
    <string name="tvTotalText3">0 de 10 Puntos</string>
    <string name="tvTotalText2">0 de 15 Puntos</string>
    <string name="et1Parcial">1ª Parcial</string>
    <string name="et2Parcial">2ª Parcial</string>
    <string name="etTp">Trabajo P.</string>
    <string name="emoji">Emoji</string>
    <string name="tvTotalText1">0 de 15 Puntos</string>
    <string name="tvTitulo">Ingrese los Puntajes Obtenidos</string>
    <string name="tv_hechopor">Desarrollado por</string>
    <string name="tv_hechopor2">Lic. Arnaldo Cantero</string>
    <string name="logo">Logo</string>
    <string name="_15_15_10">15 - 15 -10</string>
    <string name="_20_20_0">20 - 20 - 0</string>
    <string name="_10_10_20">10 - 10 - 20</string>
    <string name="_15_20_5">15 - 20 - 5</string>
    <string name="_10_20_5">10 - 20 - 5</string>
    <string name="_15_20_10">15 - 20 - 10</string>
    <string name="seleccione_el_tipo_de_evaluaci_n">Seleccione el tipo de evaluación</string>
    <string name="btnCalcular">=</string>
    <string name="tvNota2">60.999 puntos de 60 (99.999% de 100%)</string>
    <string name="tvTitulo2">Puntos que debes hacer como mínimo en la final</string>
    <string name="tv6">Ingrese su bonificación total obtenida</string>
    <string name="tvNota3">60.999 puntos de 60 (99.999% de 100%)</string>
    <string name="tvNota5">60.999 puntos de 60 (99.999% de 100%)</string>
    <string name="etBonificacion">Ingrese su Bonificación</string>
    <string name="tvTituloNota22">Para nota 2</string>
    <string name="tvTituloNota3">Para nota 3</string>
    <string name="tvTituloNota4">Para nota 4</string>
    <string name="tvTituloNota5">Para nota 5</string>
    <string name="tvNota4">60.999 puntos de 60 (99.999% de 100%)</string>
    <string name="btn_escala">Escala</string>
    <string name="btn_compartir">Compartir</string>
    <string name="tv_escala">La escala de calificaciones a ser utilizada en las evaluaciones finales es la siguiente:</string>
    <string name="tv_nota1">NOTA 1</string>
    <string name="tv_nota2">NOTA 2</string>
    <string name="tv_nota3">NOTA 3</string>
    <string name="tv_nota4">NOTA 4</string>
    <string name="tv_nota5">NOTA 5</string>
    <string name="tv_escalanota1">de 0% hasta 59%</string>
    <string name="tv_escalanota2">de 60% hasta 69%</string>
    <string name="tv_escalanota3">de 70% hasta 80%</string>
    <string name="tv_escalanota4">de 81% hasta 93%</string>
    <string name="tv_escalanota5">de 94% hasta 100%</string>
    <string name="btnevaluaciones">Evaluaciones</string>
    <string name="tv_versionapp">Version App: 1.0</string>
    <string name="tv_versionbd">Version BD: 0</string>
    <string name="tvFaltante">Te faltó 00.000 puntos para Exonerar</string>
    <string name="tvFaltanteParaNota5">Te faltó 0.00 puntos para nota 5</string>
    <string name="tvConversion">Conversion</string>
    <string name="tvSeleConv">Seleccione que quiere convertir</string>
    <string name="tvPuntoAPorc">De Punto a Porcentaje</string>
    <string name="tvPorcAPunto">De Porcentaje a Punto</string>
    <string name="tvTituloPuntoAPorc">¿De cuantos puntos es el examen?</string>
    <string name="tvTituloValor">¿Cuantos puntos hiciste?</string>
    <string name="btnAnterior">Anterior</string>
    <string name="btnSiguiente">Siguiente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvVersionActual">VERSION ACTUAL</string>
    <string name="tvVersion1">1.0</string>
    <string name="tvVersionCodigo">VERSION DEL CODIGO</string>
    <string name="tvVersionCodigo1">1</string>
    <string name="tvDesarrolladoPor">DESARROLLADO POR</string>
    <string name="tvDesarrollador">LIC. ARNALDO CANTERO</string>
    <string name="tvDerechosReservados">2017 ExoAppp. Todos los derechos reservados.</string>

</resources>