<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context="com.exoapp.ActivityPrincipal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        ads:layout_constraintBottom_toTopOf="@+id/tvVersionApp"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/men_principal"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="32sp"
            android:typeface="serif"
            ads:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/btnExoneraciones"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/boton_borde_redondo"
            android:onClick="Evaluaciones"
            android:soundEffectsEnabled="false"
            android:text="@string/btnexoneraciones"
            android:textColor="#ffffff"
            android:textSize="27sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnBonificacion"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/boton_borde_redondo"
            android:enabled="true"
            android:onClick="Bonificacion"
            android:text="@string/bonificacion"
            android:textColor="#ffffff"
            android:textSize="27sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnConversion"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/boton_borde_redondo"
            android:enabled="true"
            android:onClick="PorcAPunto"
            android:text="@string/tvConversion"
            android:textColor="#ffffff"
            android:textSize="27sp"
            android:visibility="visible" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvVersionApp"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="5dp"
        android:gravity="end"
        android:text="@string/tv_versionapp"
        android:textColor="#FFFFFF"
        ads:layout_constraintBottom_toTopOf="@+id/tvVersionBD"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.0"
        ads:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvVersionBD"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="right"
        android:gravity="end"
        android:text="@string/tv_versionbd"
        android:textColor="#ffffff"
        ads:layout_constraintBottom_toTopOf="@+id/adView1"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.0"
        ads:layout_constraintStart_toStartOf="parent" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8474453660271942/9184800934"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.494"
        ads:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

