<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".conversion.FragmentConversionSelectConve">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTituloSeleConv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tvSeleConv"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTituloSeleConv">

            <RadioButton
                android:id="@+id/rbPuntoAPorc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#00BCD4"
                android:checked="true"
                android:text="@string/tvPuntoAPorc"
                android:textColor="#FFFFFF"
                android:textSize="26sp" />

            <RadioButton
                android:id="@+id/rbPorcAPunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:buttonTint="#00BCD4"
                android:text="@string/tvPorcAPunto"
                android:textColor="#FDFDFD"
                android:textSize="26sp" />
        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>