<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="0dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:background="@color/browser_actions_bg_grey"
    tools:context="com.exoapp.ActivityEscala">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="79dp"
            android:layout_height="72dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="0dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/facu_1" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/alfa_slab_one"
            android:maxLines="1"
            android:text="Universidad Nacional del Este"
            android:textColor="#000000"
            android:textSize="18sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/alfa_slab_one"
            android:maxLines="1"
            android:text="Facultad Politécnica"
            android:textColor="#000000"
            android:textSize="18sp"
            app:autoSizeTextType="uniform" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/tv_escala"
        android:textColor="#000000"
        android:textSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/adView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.191">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:animationCache="true"
                android:background="#00CC0000"
                app:cardBackgroundColor="#C7382F"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/tv_nota1"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="40dp"
                    android:maxLines="1"
                    android:text="@string/tv_escalanota1"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:animationCache="true"
                android:background="#00CC0000"
                app:cardBackgroundColor="#FF5722"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/tv_nota2"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="40dp"
                    android:maxLines="1"
                    android:text="@string/tv_escalanota2"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:animationCache="true"
                android:background="#00CC0000"
                app:cardBackgroundColor="#FF9800"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/tv_nota3"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="40dp"
                    android:maxLines="1"
                    android:text="@string/tv_escalanota3"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:animationCache="true"
                android:background="#C1CC0000"
                app:cardBackgroundColor="#8BC34A"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/tv_nota4"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="40dp"
                    android:maxLines="1"
                    android:text="@string/tv_escalanota4"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:animationCache="true"
                android:background="#00CC0000"
                app:cardBackgroundColor="#009B06"
                app:cardCornerRadius="20dp">

                <TextView
                    android:id="@+id/textView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/tv_nota5"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:id="@+id/textView50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="40dp"
                    android:maxLines="1"
                    android:text="@string/tv_escalanota5"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:autoSizeTextType="uniform" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8474453660271942/9184800934"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintHorizontal_bias="0.0"
        ads:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
