<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".conversion.FragmentConversionConver">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTituloTotalConver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:text="@string/tvTituloPuntoAPorc"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:autoSizeTextType="uniform" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/etTotalValor"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="104dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:gravity="right|center_vertical"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tvTotalValorUnidad"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="3dp"
                android:gravity="left|center_vertical"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="21sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etTotalValor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvTituloValorObte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:gravity="center"
            android:text="@string/tvTituloValor"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:autoSizeTextType="uniform" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/etValorObte"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:backgroundTint="#FFFFFF"
                android:ems="10"
                android:gravity="right|center_vertical"
                android:inputType="numberDecimal"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tvValorObteUnidad"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="3dp"
                android:gravity="left|center_vertical"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="21sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etValorObte"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnOk"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/btnCalcular"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvResultadoConver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="TextView"
            android:textColor="#FFEB3B"
            android:textSize="22sp"
            android:visibility="invisible"
            app:autoSizeTextType="uniform" />

    </LinearLayout>

</FrameLayout>